<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyApplication5</string>
    <string name="lab1">Lab1</string>
    <string name="responsive_layout">Responsive Layout 1</string>
    <string name="txt_this">This</string>
    <string name="is">Is</string>
    <string name="my">My</string>
    <string name="first">First</string>
    <string name="android_application">Android Application</string>
    <string name="change">Change</string>
    <string name="cancel">Cancel</string>


    <string name="text_this">This</string>
    <string name="text_is">is</string>
    <string name="text_my">my</string>
    <string name="text_first">first</string>
    <string name="android_app">Android Application</string>
</resources>
