<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootConstraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".MainActivity">



    <!-- 1. Top: Lab1 -->
    <TextView
        android:id="@+id/tvLab"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/lab1"
        android:textColor="#FFFFFF"
        android:gravity="center"
        android:textSize="18sp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tvResponsive"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_weight="1"
        app:layout_constraintVertical_chainStyle="spread"/>
    <!-- 2. White title bar: Responsive Layout 1 -->
    <TextView
        android:id="@+id/tvResponsive"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/responsive_layout"
        android:background="#FFFFFF"
        android:textColor="#000000"
        android:gravity="center"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/tvLab"
        app:layout_constraintBottom_toTopOf="@id/layoutFourColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_weight="1"/>
    <!-- 3. Four colour horizontal bar (Inner ConstraintLayout) -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutFourColor"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/tvResponsive"
        app:layout_constraintBottom_toTopOf="@id/tvApp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_weight="0.8">

        <TextView
            android:id="@+id/tvThis"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/txt_this"
            android:background="#D00000"
            android:textColor="#FFFFFF"
            android:gravity="center"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tvIs"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintHorizontal_weight="1"/>

        <TextView
            android:id="@+id/tvIs"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/is"
            android:background="#0000FF"
            android:textColor="#FFFFFF"
            android:gravity="center"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@id/tvThis"
            app:layout_constraintEnd_toStartOf="@id/tvMy"
            app:layout_constraintHorizontal_weight="1"/>

        <TextView
            android:id="@+id/tvMy"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/my"
            android:background="#7B2CBF"
            android:textColor="#FFFFFF"
            android:gravity="center"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@id/tvIs"
            app:layout_constraintEnd_toStartOf="@id/tvFirst"
            app:layout_constraintHorizontal_weight="1"/>

        <TextView
            android:id="@+id/tvFirst"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/first"
            android:background="#FFE66D"
            android:textColor="#000000"
            android:gravity="center"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@id/tvMy"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="1"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>


